--- a/versions/v1.8.md
+++ b/versions/v1.8.md
@@ -34,13 +34,15 @@ permalink: /versions/v1.8/
      * [Vehicle segmentation](#vehicle-segmentation)
      * [Combining Subregions and Segments](#combining-subregions-and-segments)
 
-<!-- Added by: erikpronk, at: Fri Sep 24 15:38:33 PDT 2021 -->
+<!-- Added by: erikpronk, at: Fri Nov 19 09:34:02 PST 2021 -->
 
 <!--te-->
 ## Introduction
 The ICCT’s Roadmap model is a global transportation emissions model covering all on-road vehicle activity in over 190 countries. The Roadmap model is intended to help policymakers worldwide to identify and understand trends in the transportation sector, assess emission impacts of different policy options, and frame plans to effectively reduce emissions of both greenhouse gases (GHGs) and local air pollutants. It is designed to allow transparent, customizable estimation of transportation emissions for a broad range of policy cases.
 
-Making use of the ICCT’s comprehensive tracking of worldwide transportation policies, the model provides annual estimates of historical and future emissions under currently adopted policies out to 2050. Roadmap estimates historical and projected well-to-wheel CO<sub>2</sub> emissions disaggregated by powertrain and fuel type as well as emissions of 15 local air pollutants. This version of the model includes six vehicle types and 11 powertrain and fuel combinations.
+Making use of the ICCT’s worldwide tracking of transportation policies, the model provides annual estimates of historical and future emissions under currently adopted policies out to 2050. Roadmap estimates historical and projected well-to-wheel CO<sub>2</sub> emissions disaggregated by powertrain and fuel type as well as emissions of 15 local air pollutants. This version of the model includes six vehicle types and 11 powertrain and fuel combinations, as shown in Tables 1 and 2, respectively.
+
+**Table 1:** *Roadmap vehicle types.*
 
 | Roadmap name | Vehicle category | Description                                   |
 | ------------ | ---------------- | --------------------------------------------- |
@@ -50,6 +52,8 @@ Making use of the ICCT’s comprehensive tracking of worldwide transportation po
 | Bus          | HDV              | Urban and coach buses (GVW ≥ 3.5 tonnes)      |
 | MDT          | HDV              | Medium-duty trucks (GVW 3.5-15 tonnes)        |
 | HDT          | HDV              | Heavy-duty trucks (GVW \> 15 tonnes)          |
+
+**Table 2:** *Roadmap powertrain types.*
 
 | Roadmap powertrain | Roadmap fuel          | Description                                                                                 |
 | ------------------ | --------------------- | ------------------------------------------------------------------------------------------- |
@@ -68,31 +72,30 @@ Making use of the ICCT’s comprehensive tracking of worldwide transportation po
 Many of the default model inputs are sourced from the IEA Mobility Model (MoMo)’s February 2021 version. Additional country-specific data is included for key regions where available. Using sales inputs and calibrated survival curves, Roadmap’s turnover module first compiles a detailed inventory of vehicle stock. Applying per-vehicle mileage rates and energy intensities, the model next calculates detailed energy consumption estimates. These, in turn, are a key input to the emissions calculations. This document describes the inputs and methods used in each major calculation step as well as some additional optional components available to users.
 
 ## Sales
-Together with vehicle survival curves, annual vehicle sales are the main driver of vehicle stock within Roadmap. Default historical data on vehicle sales are sourced primarily from the MoMo database, which provides historical sales data for 45 regions, including 31 individual countries.
+Together with vehicle survival curves, annual vehicle sales are the main driver of vehicle stock within Roadmap. Default historical data on vehicle sales are sourced from country-specific data sources and from the MoMo database, which provides historical sales data for 45 regions, including 31 individual countries.
 
 ### Historical sales
 
 For countries within aggregate MoMo regions, new vehicle sales are disaggregated based on each country’s share of energy consumption within the region. Energy balances are derived from IEA’s World Energy Balances 2019 edition, which covers road transport energy consumption by fuel type from 1971-2018. Energy consumption estimates for 2019 and 2020 (the final historical year) are extended from 2018 by applying growth rates derived from MoMo’s energy consumption. Multiplying each country’s fuel consumption shares by the regional total sales volumes gives country-specific vehicle sales for each of the 11 powertrain types.
 
-Note that the World Energy Balances (WEB) lack data on LNG and Hydrogen and as such, the total sales are assumed to be 0 unless otherwise specified by an alternative data source. LNG and CNG are grouped into a single category in WEB, while the MoMo data only include CNG. Therefore, no ICE LNG specific vehicle sales or stock are present in the model at the time of writing, so this does not pose an issue. For hydrogen, historical and projected sales of FCEVs are specified independently of the World Energy Balances.
+Note that the World Energy Balances lack data on LNG and Hydrogen and as such, the total sales are assumed to be 0 unless otherwise specified by an alternative data source. LNG and CNG are grouped into a single category in the World Energy Balances, while the MoMo data only include CNG. Therefore, no ICE LNG specific vehicle sales or stock are present in the model at the time of writing, so this does not pose an issue. For hydrogen, historical and projected sales of FCEVs are specified independently.
 
-Historical sales for several countries are updated using country-specific data sourced from [MOVES3](https://www.epa.gov/moves/latest-version-motor-vehicle-emission-simulator-moves) (United States), [IHS](https://ihsmarkit.com/products/commercial-vehicle-insight-intelligence.html) (2020 HDV sales for multiple countries and more calendar years for the EU), ICCT’s [India Emissions Model](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf) [BAU](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf) scenario, [EV Volumes](https://www.ev-volumes.com/) (LDV sales for multiple countries), and ICCT’s [Pocketbook](https://theicct.org/series/eu-vehicle-market-statistical-pocketbook) (LDV data for the EU). China historical stock and sales are based on multiple sources including [CAAM](http://www.caam.org.cn/chn/4/cate_39/list_1.html), CATARC, ZEDATA, VECC, and EV100. The Pocketbook and IHS HDV sales data prior to 2020 are used only to calculate the share of sales by powertrain and not to overwrite the sales totals. Default model inputs are derived from these data sources with the highest priority data listed first:
+Historical sales for several countries are updated using country-specific data. Table 3 shows these data sources, ordered by priority. If an ISO + Vehicle + CY combination appears multiple times, assume that the first source in the table is the final source.
 
-  - MOVES3 for the United States total sales;
+**Table 3:** *Data sources for historical sales. This table is ordered by priority, meaning that the top row of data takes precedence over all data below it.*
 
-  - CAAM, CATARC, ZEDATA, VECC, and EV100 for China total sales and shares by powertrain;
-
-  - IHS 2020 HDV total sales;
-
-  - EU HDV (IHS) and LDV (Pocketbook) data used for the sales shares by powertrain;
-
-  - EU HDV and LDV sales totals are derived from [ACEA](https://www.acea.auto/reliable-data-statistics/) data;
-
-  - India Emissions Model for India sales data not already covered;
-
-  - EV Volumes fills out total sales gaps for available countries in its dataset not already covered;
-
-  - Data from IEA’s MoMo database.
+| Source                                                                                                                                                                                   | Vehicles                                                        | Region / ISO                                                                                                                     | Data Type                               | Calendar Years                                                                                                                           |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
+| [MOVES3](https://www.epa.gov/moves/latest-version-motor-vehicle-emission-simulator-moves) ([ORNL](https://tedb.ornl.gov/wp-content/uploads/2021/02/TEDB_Ed_39.pdf#page=182) for LDV BEV) | All                                                             | USA                                                                                                                              | Total sales, sales shares by powertrain | 2000-2050                                                                                                                                |
+| [CAAM](http://www.caam.org.cn/chn/4/cate_39/list_1.html), CATARC, ZEDATA, VECC, and EV100                                                                                                | PC, LCV, Bus, MDT, HDT                                          | CHN                                                                                                                              | Total sales, sales shares by powertrain | 2020                                                                                                                                     |
+| ADK Automotive                                                                                                                                                                           | Bus, MDT, HDT                                                   | BRA                                                                                                                              | Total sales                             | 1971-2020                                                                                                                                |
+| ICCT: NOM-044 delay analysis                                                                                                                                                             | Bus, MDT, HDT                                                   | MEX                                                                                                                              | Total sales                             | 2000-2019                                                                                                                                |
+| [IHS 2020](https://ihsmarkit.com/products/commercial-vehicle-insight-intelligence.html)                                                                                                  | Bus, MDT, HDT                                                   | CAN, DEU, DNK, ESP, GBR, ITA, MEX, NLD, NOR, SWE                                                                                 | Total sales, sales shares by powertrain | 2020                                                                                                                                     |
+| [EV Volumes](https://www.ev-volumes.com/)                                                                                                                                                | PC, LCV                                                         | ARE, BRA, CAN, CHE, CHL, CHN, COL, HKG, IDN, ISL, ISR, JPN, KOR, MEX, MYS, NOR, NZL, PHL, RUS, SAU, SGP, THA, TUR, TWN, UKR, ZAF | Total sales, sales shares by powertrain | 2011-2019                                                                                                                                |
+| [ICCT’s Pocketbook](https://theicct.org/series/eu-vehicle-market-statistical-pocketbook)                                                                                                 | PC, LCV                                                         | European Union, ISL, GBR, NOR, CHE, TUR                                                                                          | Total sales, sales shares by powertrain | 2001-2020                                                                                                                                |
+| [India Emissions Model](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf)                                                                           | All                                                             | IND                                                                                                                              | Total sales, sales shares by powertrain | 2000-2050                                                                                                                                |
+| [ACEA](https://www.acea.auto/reliable-data-statistics/)                                                                                                                                  | Bus, MDT, HDT (PC / LCV available if not covered in Pocketbook) | European Union, ISL, GBR, NOR, CHE                                                                                               | Total sales                             | 2000-2018 (MC), 2000-2019 (PC), 1997-2019 (LCV), 1980-2019 (Bus, MDT, HDT). Note: some 2020 data for Bulgaria, Switzerland, and Iceland. |
+| IEA’s Mobility Model (MoMo)                                                                                                                                                              | All                                                             | All                                                                                                                              | All                                     | All                                                                                                                                      |
 
 ### Projected sales
 
@@ -108,15 +111,15 @@ Where:
 
   - \\(G\\) = The growth period \\(y1\\) to \\(y2\\)
 
-In all cases, the last year of the growth period \\(y2\\) is the model end year (2050). The first year \\(y1\\) is either 2020, 2021, 2022, or 2023, depending on the near-term sales projection cases that are in place to account for the decline in sales in 2020 due to the global COVID-19 pandemic. These cases are:
+In all cases, the last year of the growth period \\(y2\\) is the model end year (2050). The first year \\(y1\\) is either 2020, 2021, 2022, or 2023, depending on the near-term sales projection cases that are in place to account for the decline in sales in 2020 due to the global COVID-19 pandemic. Excluding the USA and India as these sales are fully defined for all projected years, these cases are:
 
-1.  2023 for all light vehicles (PC, LCV)
+1.  2023 for all light vehicles (PC, LCV) based on Marklines projections
 
-2.  2021 for commercial vehicles (Bus, MDT, HDT) in China
+2.  2021 for commercial vehicles (Bus, MDT, HDT) in China based on [CAAM](https://www.sohu.com/a/437846173_430289)’s Chinese auto market forecast
 
 3.  2022 for commercial vehicles in countries where the decline in sales from 2019 to 2020 is greater than 3%
 
-4.  2020 for all other commercial vehicles and motorcycles. These near-term sales projections are based on [Marklines](https://www.marklines.com/en/search/1?q=light+vehicle) and [CAAM](https://www.sohu.com/a/437846173_430289)’s Chinese auto market forecast.
+4.  2020 for all other commercial vehicles and motorcycles.
 
 ### Used vehicle imports
 
@@ -124,7 +127,7 @@ Roadmap includes default data quantifying total imports of used vehicles and est
 
 To support flexibility in modeling used vehicle imports, Roadmap treats used sales as an annual share of total sales. (Alternatively, users can specify the share of used sales compared to new sales, as is done for intra-EU trade as discussed below.) Users can therefore provide the model with alternate data for new sales, used sales, or total sales individually without needing to adjust the other assumptions.
 
-As per Ecologic ([Ecologic, 2020](https://www.ecologic.eu/sites/files/publication/2020/2632-01_ecologicisi_usedvehiclesstocktrade_march2020.pdf)) Intra-EU trade is largely from Western European countries such as Germany, France, Netherlands etc. to Eastern European countries such as Poland, Romania, and Bulgaria. EU countries are also allowed to export vehicles to select non-EU neighbors such as Serbia, Turkey, and Albania. Passenger cars are the most imported used vehicle. Most countries will consider the amount of air pollution that is generated by an imported vehicle when calculating their registration tax, and some countries such as Finland, Hungary, and Serbia outright ban the import of vehicles that do not adhere to certain EU pollution standards (generally at least Euro 3 for passenger vehicles, and Euro 5 for commercial vehicles). The Ecologic report also estimates the volume of used vehicles imported by specific countries in 2017. These volumes are used in conjunction with the new vehicle sales data from the model to obtain a used/new sales ratio for each country and vehicle type, which by default is assumed to be constant going into the future.
+As per Ecologic ([Ecologic, 2020](https://www.ecologic.eu/17559)), Intra-EU trade is largely from Western European countries such as Germany, France, Netherlands etc. to Eastern European countries such as Poland, Romania, and Bulgaria. EU countries are also allowed to export vehicles to select non-EU neighbors such as Serbia, Turkey, and Albania. Passenger cars are the most imported used vehicle. Most countries will consider the amount of air pollution that is generated by an imported vehicle when calculating their registration tax, and some countries such as Finland, Hungary, and Serbia outright ban the import of vehicles that do not adhere to certain EU pollution standards (generally at least Euro 3 for passenger vehicles, and Euro 5 for commercial vehicles). The Ecologic report also estimates the volume of used vehicles imported by specific countries in 2017. These volumes are used in conjunction with the new vehicle sales data from the model to obtain a used/new sales ratio for each country and vehicle type, which by default is assumed to be constant going into the future.
 
 The ages and emission control technologies of used vehicle imports are determined one of several ways:
 
@@ -159,7 +162,10 @@ Where:
 
   - \\(k\\) *= Shape parameter = 5*
 
-![](/roadmap-doc/assets/faz_surv.svg)  
+![](/roadmap-doc/assets/faz_surv.svg)
+
+**Figure 1:** *Example from-age-zero survival curves.*
+
 The steepness parameter is calibrated using historical stock and sales inventories. For most regions, the default from-age-zero survival curves are calibrated using stock and sales data from the MoMo database; however, some regions use more-detailed national fleet data for recent years. For each country (\\(C\\)) and vehicle type (\\(V)\\), the vehicle stock in a calendar year (\\(CY)\\) of a given model year (\\(\text{MY}\\)) is calculated:
 
 $$\text{Stock}_{CY,\ MY} = \ \text{Sales}_{\text{MY}}\  \times \ \text{Survival}_{C,\ V}(CY - MY)$$
@@ -255,6 +261,8 @@ Mileage was converted to age based on region-specific data that show how quickly
 
 ![](/roadmap-doc/assets/high_ems_age_effects.svg)
 
+**Figure 2:** *Emission rate timeline by age, used to model mileage degradation.*
+
 Qualitative depiction of the implementation of tampering, mal-maintenance, and malfunction (TM\&M) age effects. Adapted from MOVES2014 technical report.
 
 ### Sulfur effects
@@ -309,7 +317,9 @@ The feedstock shares for regions in which this level of detail is provided are u
 
 ### GHG emissions
 
-Roadmap reports emissions for three GHGs (CO<sub>2</sub>, CH<sub>4</sub>, and N<sub>2</sub>O) as well as climate forcers BC, OC, and sulfate aerosols. By default, the model calculates tank-to-wheel (TTW), well-to-tank (WTT), and well-to-wheel (WTW) GHG emissions. Unlike other pollutants which depend on vehicle emission control technologies, CO<sub>2</sub> emissions are calculated based on energy consumption and fuel carbon intensity. Fuel GHG emission intensities are taken from a comprehensive ICCT [life-cycle assessment](https://theicct.org/publications/global-LCA-passenger-cars-Jul2021) which includes emissions from fuel extraction, refining, operation, and disposal (Bieker, 2021). They are reported on a 20-year and 100-year horizon, using the following GWP values (AR5 WG1 Chapter 8 Supplemental (8SM) Table 8.SM.17):
+Roadmap reports emissions for three GHGs (CO<sub>2</sub>, CH<sub>4</sub>, and N<sub>2</sub>O) as well as climate forcers BC, OC, and sulfate aerosols. By default, the model calculates tank-to-wheel (TTW), well-to-tank (WTT), and well-to-wheel (WTW) GHG emissions. Unlike other pollutants which depend on vehicle emission control technologies, CO<sub>2</sub> emissions are calculated based on energy consumption and fuel carbon intensity. Fuel GHG emission intensities are taken from a comprehensive ICCT [life-cycle assessment](https://theicct.org/publications/global-LCA-passenger-cars-Jul2021) which includes emissions from fuel extraction, refining, operation, and disposal (Bieker, 2021). They are reported on a 20-year and 100-year horizon, using the following GWP values in Table 4 (AR5 WG1 Chapter 8 Supplemental (8SM) Table 8.SM.17):
+
+**Table 4:** *GWP values for calculating GHG emissions.*
 
 | Pollutant      | GWP20   | GWP100 |
 | -------------- | ------- | ------ |
@@ -329,7 +339,9 @@ The Roadmap model is designed to explore the implications of national and region
 
 ### Scenario inputs
 
-Scenarios can define the following inputs:
+Scenarios can define the the inputs shown in Table 5.
+
+**Table 5:** *Descriptions of scenario inputs.*
 
 | Input                                    | Description                                                                                                                 |
 | ---------------------------------------- | --------------------------------------------------------------------------------------------------------------------------- |
@@ -370,7 +382,9 @@ Besides the inputs used as downscaling factors, all other subregion inputs such 
 
 Roadmap can be run for any of six vehicle types by default, including two- and three-wheelers (MC), passenger cars (PC), light commercial vehicles (LCV), urban and coach buses (Bus), medium-duty trucks (MDT), and heavy-duty trucks (HDT). These categories are intentionally broad, as there is little consistency in terms of classifications and data availability across all global regions. Many countries, however, do have greater detail on vehicle segments. In these cases, Roadmap can accept additional data on how to segment the larger categories and run with a greater level of detail.
 
-Vehicle segmentation inputs are very similar to subregional inputs, described above. To toggle the segmentation mode, users must provide a mapping file of segments to Roadmap vehicle types, as well as indicate in which countries/regions (denoted by ISO alpha-3 code) the mapping applies. Different levels of segmentation can be applied for different ISOs. As with subregions, detailed sales must also be provided for each segment, either as a share of the Roadmap vehicle type total or as absolute numbers of vehicles. An example of a basic segment map is provided below.
+Vehicle segmentation inputs are very similar to subregional inputs, described above. To toggle the segmentation mode, users must provide a mapping file of segments to Roadmap vehicle types, as well as indicate in which countries/regions (denoted by ISO alpha-3 code) the mapping applies. Different levels of segmentation can be applied for different ISOs. As with subregions, detailed sales must also be provided for each segment, either as a share of the Roadmap vehicle type total or as absolute numbers of vehicles. An example of a basic segment map is provided in Table 6.
+
+**Table 6:** *Example segment map.*
 
 | ISO | Vehicle | Segment |
 | --- | ------- | ------- |
