--- a/versions/v2.1.md
+++ b/versions/v2.1.md
@@ -3,7 +3,41 @@ layout: page
 title: 'Roadmap v2.1 Documentation'
 permalink: /versions/v2.1/
 ---
+## Table of contents
 <!--ts-->
+  * [Introduction](#introduction)
+  * [Sales](#sales)
+     * [Historical sales](#historical-sales)
+     * [Projected sales](#projected-sales)
+     * [Used vehicle imports](#used-vehicle-imports)
+  * [Stock turnover](#stock-turnover)
+     * [From-age-zero turnover](#from-age-zero-turnover)
+     * [Year-over-year turnover](#year-over-year-turnover)
+     * [Major Markets](#major-markets)
+  * [Mileage](#mileage)
+     * [Mileage degradation](#mileage-degradation)
+     * [Scrappage policies](#scrappage-policies)
+     * [Passenger-freight activity](#passenger-freight-activity)
+  * [Vehicle efficiency](#vehicle-efficiency)
+  * [Emissions](#emissions)
+     * [Emissions standards](#emissions-standards)
+     * [Emission factors](#emission-factors)
+     * [Emission deterioration](#emission-deterioration)
+     * [Plug-in hybrid electric vehicles (PHEVs)](#plug-in-hybrid-electric-vehicles-phevs)
+     * [High emitters](#high-emitters)
+     * [Sulfur effects](#sulfur-effects)
+     * [Biodiesel effects on local air pollutants](#biodiesel-effects-on-local-air-pollutants)
+     * [Well-to-wheel GHG emissions of biofuels](#well-to-wheel-ghg-emissions-of-biofuels)
+     * [GHG emissions](#ghg-emissions)
+  * [Policies and scenarios](#policies-and-scenarios)
+     * [Scenario inputs](#scenario-inputs)
+     * [Subregional policies](#subregional-policies)
+     * [Vehicle segmentation](#vehicle-segmentation)
+     * [Combining Subregions and Segments](#combining-subregions-and-segments)
+
+<!-- Created by https://github.com/ekalinin/github-markdown-toc -->
+<!-- Added by: j.benoit, at: Fri May 26 13:42:06 EDT 2023 -->
+
 <!--te-->
 ## Introduction
 The ICCT’s Roadmap model is a global transportation emissions model covering all on-road vehicle activity in over 190 countries. The Roadmap model is intended to help policymakers worldwide to identify and understand trends in the transportation sector, assess emission impacts of different policy options, and frame plans to effectively reduce emissions of both greenhouse gases (GHGs) and local air pollutants. It is designed to allow transparent, customizable estimation of transportation emissions for a broad range of policy cases.
