Revised update check 2.3

--- a/versions/v2.3.md
+++ b/versions/v2.3.md
@@ -306,7 +306,7 @@ Where:
 
 - $k$ = Shape parameter = 5
 
-<img src="/roadmap-doc/assets/faz_surv.svg" style="width:6.5in;height:4.03958in" />
+![](/roadmap-doc/assets/faz_surv.svg)
 
 **Figure 1:** *Example from-age-zero survival curves.*
 
@@ -393,7 +393,7 @@ Further adjustments were made to the PM and NOx emission factors certified to US
 
 For alternative fuels, such as Ethanol, Biodiesel, CNG, and LPG, the emission factors are taken from the sources listed above where available. For any missing combinations of emission standards and fuels, the emission factors are calculated based on available data for similar emission standards and fuels. For example, for a given vehicle type and standard, if emission factors are not available for China, but they are available for an equivalent standard and fuel type in Europe, then the missing data for China are imputed as follows. The ratio of the predominant ICE emission factor (for gasoline or diesel depending on vehicle type) and the alternative fuel emission factor for the equivalent Euro standard is used to calculate the unknown alternative fuel emission factor for China using its known ICE emission factor.
 
-$${EF}_{China,\ \ AltFuel} = \frac{{EF}_{Euro,\ AltFuel}}{{EF}_{Euro,\ ICE}}\  \times \ {EF}_{China,\ ICE}$$
+$$\text{EF}_{China,\ \ AltFuel} = \frac{\text{EF}_{Euro,\ AltFuel}}{\text{EF}_{Euro,\ ICE}}\  \times \ \text{EF}_{China,\ ICE}$$
 
 The emission factors may also be optionally adjusted according to age using an emission deterioration profile. This option allows for vehicles to deteriorate over time and thus emit more as they age.
 
@@ -415,7 +415,7 @@ As tampering, malfunction, and poor maintenance affect emissions based on the ve
 
 Mileage was converted to age based on region-specific data that show how quickly different types of vehicles accumulate miles. We use TRACCS data for the EU and activity data from VECC for China, which is also consistent with the estimate from Huo et al. ([Huo et al., 2012](https://www.sciencedirect.com/science/article/abs/pii/S0301421511007087?via%3Dihub)). We use the same ages for the US as in MOVES. In addition, we distinguish warranty and useful life ages by control level. For example, China only starts to have warranty requirements in China VI, and more recent standards, for example, China VI, Euro VI and US2004+, require a longer useful life than earlier standards.
 
-<img src="/roadmap-doc/assets/high_ems_age_effects.svg" style="width:5.07441in;height:3.32385in" />
+![](/roadmap-doc/assets/high_ems_age_effects.svg)
 
 **Figure 2:** *Emission rate timeline by age, used to model mileage degradation.*
 
