--- a/versions/v2.3.md
+++ b/versions/v2.3.md
@@ -425,43 +425,44 @@ Qualitative depiction of the implementation of tampering, mal-maintenance, and m
 
 Fuel sulfur effects on sulfate (SO<sub>4</sub>) and sulfur dioxide (SO<sub>2</sub>) running emissions apply [MOVES2014a methods](https://nepis.epa.gov/Exe/ZyPDF.cgi?Dockey=P100O5W2.pdf) (equations 9-1 and 9-3).
 
-$${SO}_{2}(g) = \ FC(g)\  \times \ \lbrack S\rbrack(ppm) \times \ \frac{{MW}_{{SO}_{2}}\ }{{MW}_{S}}\  \times \ f{SO}_{2}\  \times \ \left( \frac{10^{6}}{ppm} \right)$$
+$$\text{SO}_{2}\left( g \right) = \ \text{FC}\left( g \right)\  \times \ \lbrack S\rbrack\left( \text{ppm} \right) \times \ \frac{\text{MW}_{\text{SO}_{2}}\ }{\text{MW}_{S}}\  \times \ f\text{SO}_{2}\  \times \ \left( \frac{10^{6}}{\text{ppm}} \right)$$
 
 Where:
 
-- $FC(g)\ $ = fuel consumption (grams)
+  - \\(\text{FC}\left( g \right)\ \\) = fuel consumption (grams)
 
-- $\lbrack S\rbrack(ppm)\ $ = fuel-sulfur level (ppm)
+  - \\(\lbrack S\rbrack\left( \text{ppm} \right)\ \\) = fuel-sulfur level (ppm)
 
-- $\frac{{MW}_{{SO}_{2}}\ }{{MW}_{S}}$ = the ratio of molecular weight of sulfur dioxide to sulfur = 2.0
+  - \\(\frac{\text{MW}\_{\text{SO}\_{2}}\ }{\text{MW}\_{S}}\\) = the ratio of molecular weight of sulfur dioxide to sulfur = 2.0
 
-- $f{SO}_{2}$ = Fraction of fuel sulfur that is converted to gaseous SO<sub>2</sub> emissions (1 - fraction converted to SO<sub>4</sub>).
+  - \\(f\text{SO}\_{2}\\) = Fraction of fuel sulfur that is converted to gaseous SO<sub>2</sub> emissions (1 - fraction converted to SO<sub>4</sub>).
 
 This equation simplifies to:
 
-$${SO}_{2}(g)\  = \ FC(g)\  \times \ {SO}_{2}\ EF\ (g/ppm)\  \times \ S(ppm)$$
+$$\text{SO}_{2}\left( g \right)\  = \ \text{FC}(g)\  \times \ \text{SO}_{2}\ \text{EF}\ (g/\text{ppm})\  \times \ S(\text{ppm})$$
 
-where ${SO}_{2}EF$ is the emission factor specific to HDVs and LDVs by emission control technology.
+where \\(\text{SO}\_{2}\text{EF}\\) is the emission factor specific to HDVs and LDVs by emission control technology.
 
 SO<sub>4</sub> emissions are calculated:
 
-$${SO4}_{x} = NonECPMB\  \times \ S_{B}\  \times \ \left\lbrack 1 + \ F_{B}\  \times \ \left( \frac{x}{x_{B}} - 1 \right) \right\rbrack$$
+$${\text{SO}4}_{x} = \text{NonECPMB}\  \times \ S_{B}\  \times \ \left\lbrack 1 + \ F_{B}\  \times \ \left( \frac{x}{x_{B}} - 1 \right) \right\rbrack$$
 
 Where:
 
-- $NonECPMB$ = the reference non-elemental carbon PM<sub>2.5</sub> emission rate
+  - \\(\text{NonECPMB}\\) = the reference non-elemental carbon PM<sub>2.5</sub> emission rate
 
-- $S_{B}$ = the sulfate reference fraction
+  - \\(S\_{B}\\) = the sulfate reference fraction
 
-- $x$ = the user-supplied fuel sulfur level
+  - \\(x\\) = the user-supplied fuel sulfur level
 
-- $x_{B}$ = the reference fuel sulfur level
+  - \\(x\_{B}\\) = the reference fuel sulfur level
 
-- $F_{B}$ = the percentage of sulfate originating from the fuel sulfur in the reference case
+  - \\(F\_{B}\\) = the percentage of sulfate originating from the fuel sulfur in the reference case
 
-- ${SO4}_{x}$ = sulfate emissions at the user-supplied fuel sulfur level
+  - \\({SO4}\_{x}\\) = sulfate emissions at the user-supplied fuel sulfur level
 
-The $S_{B}$, $F_{B}$, and $x_{B}$, parameters vary by vehicle type, model year group, and emission process.
+The \\(S_{B}\\), \\(F_{B}\\), and \\(x\_{B}\\), parameters vary by vehicle type, model year group, and emission process.
+
 
 ### Biodiesel effects on local air pollutants
 
