Update v2.3 and landing page with authors
And remove Mexico MOVES 2014a reference, per https://github.com/theicct/roadmap/issues/509.

--- a/versions/v2.3.md
+++ b/versions/v2.3.md
@@ -6,6 +6,7 @@ permalink: /versions/v2.3/
 ## Table of contents
 <!--ts-->
   * [Introduction](#introduction)
+    * [Acknowledgments](#acknowledgments) 
   * [Sales](#sales)
      * [Historical sales](#historical-sales)
      * [Projected sales](#projected-sales)
@@ -72,6 +73,10 @@ Making use of the ICCT’s worldwide tracking of transportation policies, the mo
 | FCEV               | Hydrogen              | Fuel cell electric vehicles powered by hydrogen                                             |
 
 Many of the default model inputs are sourced from the IEA Mobility Model (MoMo)’s January 2023 version. Additional country-specific data is included for key regions where available. Using sales inputs and calibrated survival curves, Roadmap’s turnover module first compiles a detailed inventory of vehicle stock. Applying per-vehicle mileage rates and energy intensities, the model next calculates detailed energy consumption estimates. These, in turn, are a key input to the emissions calculations. This document describes the inputs and methods used in each major calculation step as well as some additional optional components available to users.
+
+### Acknowledgments
+
+Roadmap was first developed in 2019 by Caleb Braun, Lingzhi Jin, and Josh Miller. Version 2.3 was developed in 2024 by Georgia Klein, Gabe Hillman Alvarez, and Arijit Sen.
 
 ## Sales
 Together with vehicle survival curves, annual vehicle sales are the main driver of vehicle stock within Roadmap. Default historical data on vehicle sales are sourced from country-specific data sources and from the MoMo database, which provides historical sales data for 45 regions, including 31 individual countries.
@@ -387,7 +392,7 @@ Tailpipe emission factors are sourced from a combination of emission factor mode
 
 As both HBEFA and EMEP provide emission factors for a larger variety of vehicle types and weight classes than Roadmap, we first aggregate the emission factors to the Roadmap categories. The emission factors for 19 countries are aggregated with local, up-to-date stock inventories. HBEFA emission factors are used for buses and include a weighting of urban vs. intercity buses in addition to vehicle weight class. Emission factors for other vehicle types are sourced from EMEP, however the additional detail by weight class is only given for trucks. By default, other countries that follow the EU regulatory pathway use emission factors based on the average fleet composition from the EU countries with available data; however, users can supply any set of country-specific emission factors.
 
-For the United States and Canada, vehicle emission factors are based on EPA's MOVES3 model. MOVES estimates diesel, gasoline, and natural gas emission factors for vehicles following the US standards. Rather than match the EPA’s emission control naming standard and frequency (e.g. US 2007 and US 2010), Roadmap offers emission factors for all model years from 1990 to 2025 calculated using the emissions and energy consumption of available vehicle and fuel combinations. Newer heavy-duty vehicles in Mexico are assumed to be partially sourced from the USA and thus are assigned a weighted emission factor based on US and EU standards. These Mexico emission factors are remain based on data from [MOVES 2014a](https://cfpub.epa.gov/si/si_public_file_download.cfm?p_download_id=525697&Lab=OTAQ). China-specific emission factors are sourced from the ICCT’s China model, which incorporates data from the Vehicle Emission Control Center and Tsinghua University.
+For the United States and Canada, vehicle emission factors are based on EPA's MOVES3 model. MOVES estimates diesel, gasoline, and natural gas emission factors for vehicles following the US standards. Rather than match the EPA’s emission control naming standard and frequency (e.g. US 2007 and US 2010), Roadmap offers emission factors for all model years from 1990 to 2025 calculated using the emissions and energy consumption of available vehicle and fuel combinations. Newer heavy-duty vehicles in Mexico are assumed to be partially sourced from the USA and thus are assigned a weighted emission factor based on US and EU standards. China-specific emission factors are sourced from the ICCT’s China model, which incorporates data from the Vehicle Emission Control Center and Tsinghua University.
 
 Further adjustments were made to the PM and NOx emission factors certified to US and EU regulatory pathways based on real-world performance data, including remote sensing measurements, recent PEMS testing, and planned updates to MOVES. For NOx, the MOVES3-based emission factors for the US are adjusted to align with real-world emissions from The Real Urban Emissions Initiative ([TRUE](https://www.trueinitiative.org/)). Roadmap also supports additional speciation of PM<sub>2.5</sub> for all regions into components BC, OC, non-carbon organic matter, NO<sub>3</sub>, NH<sub>4</sub>, elemental metals, and unspeciated PM, based on Table C-1 and Table C-3 of [MOVES 2014](https://cfpub.epa.gov/si/si_public_file_download.cfm?p_download_id=525697&Lab=OTAQ)a.
 
